--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,20 +1,4 @@
-import styled from "styled-components";
-
-export const StyledHome = styled.div`
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-`;
-
-export const DirectoryMenu = styled.div`
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-`;
-
-export const MenuItem = styled.div`
+.menu-item {
   min-width: 30%;
   height: 240px;
   flex: 1 1 auto;
@@ -23,6 +7,24 @@ export const MenuItem = styled.div`
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+
+    .content {
+      opacity: 0.9;
+    }
+  }
+
+  &.large {
+    height: 379px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -30,6 +32,14 @@ export const MenuItem = styled.div`
 
   &:last-child {
     margin-left: 7.5px;
+  }
+
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
   .content {
@@ -40,6 +50,9 @@ export const MenuItem = styled.div`
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: #fff;
+    opacity: 0.7;
+    position: absolute;
 
     .title {
       font-weight: bold;
@@ -53,4 +66,4 @@ export const MenuItem = styled.div`
       font-size: 16px;
     }
   }
-`;
+}
