--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,15 @@
     margin-left: auto;
     font-size: 36px;
   }
+
+  .test-warning {
+    text-align: center;
+    margin: 40px 0;
+    font-size: 24px;
+    color: #ff0000;
+  }
+
+  button {
+    margin-left: auto;
+  }
 }
